force-app/main/default/objects/Lessons_Learned__c/Lessons_Learned__c.object-meta.xml
<CustomObject>
    <label>Lessons Learned</label>
    <nameField>
        <displayFormat>LL-{00000000}</displayFormat>
        <label>Lessons Learned Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lessons Learneds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>