force-app/main/default/objects/Lessons_Learned__c/fields/Business_impact_media_attention__c.field-meta.xml
<CustomField>
    <fullName>Business_impact_media_attention__c</fullName>
    <label>Business impact/media attention</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>