force-app/main/default/objects/Lessons_Learned__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Lessons Learneds</relationshipLabel>
    <relationshipName>Lessons_Learneds</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>