force-app/main/default/objects/Lessons_Learned__c/fields/Case_Priority__c.field-meta.xml
<CustomField>
    <fullName>Case_Priority__c</fullName>
    <formula>TEXT(Case__r.Priority)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Priority</label>
    <type>Text</type>
</CustomField>