force-app/main/default/objects/Lessons_Learned__c/fields/Customer_GEO__c.field-meta.xml
<CustomField>
    <fullName>Customer_GEO__c</fullName>
    <label>Customer GEO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMER</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>