force-app/main/default/objects/Lessons_Learned__c/fields/Escalation__c.field-meta.xml
<CustomField>
    <fullName>Escalation__c</fullName>
    <label>Escalation</label>
    <referenceTo>Escalation__c</referenceTo>
    <relationshipLabel>Lessons Learned</relationshipLabel>
    <relationshipName>Lessons_Learneds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>