force-app/main/default/objects/Lessons_Learned__c/fields/Escalation_Type__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Type__c</fullName>
    <formula>Escalation__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation Type</label>
    <type>Text</type>
</CustomField>