force-app/main/default/objects/Lessons_Learned__c/fields/Idea_Reference__c.field-meta.xml
<CustomField>
    <fullName>Idea_Reference__c</fullName>
    <label>Idea Reference</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>