force-app/main/default/objects/Lessons_Learned__c/fields/Issue_Summary__c.field-meta.xml
<CustomField>
    <fullName>Issue_Summary__c</fullName>
    <label>Issue Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>