force-app/main/default/objects/Lessons_Learned__c/fields/Lessons_Learned_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Lessons_Learned_Attendees__c</fullName>
    <label>Lessons Learned Attendees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>