force-app/main/default/objects/Lessons_Learned__c/fields/Lessons_Learned_Number__c.field-meta.xml
<CustomField>
    <fullName>Lessons_Learned_Number__c</fullName>
    <formula>&apos;LL-&apos;+ TEXT(ABS(VALUE(RIGHT( Name , (FIND(&apos;-&apos;, Name) + 6)))) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lessons Learned Number</label>
    <type>Text</type>
</CustomField>