force-app/main/default/objects/Lessons_Learned__c/fields/Product_Area_s__c.field-meta.xml
<CustomField>
    <fullName>Product_Area_s__c</fullName>
    <label>Product Area(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>