force-app/main/default/objects/Lessons_Learned__c/fields/Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Stakeholders__c</fullName>
    <label>Stakeholders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>