force-app/main/default/objects/Lessons_Learned__c/validationRules/Closed_Date_should_be_in_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Date_should_be_in_future</fullName>
    <active>true</active>
    <errorConditionFormula>Closed_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Closed_Date__c</errorDisplayField>
    <errorMessage>Closed Date should be in future</errorMessage>
</ValidationRule>